--- a/responsive.css
+++ b/responsive.css
@@ -1,1 +1,20 @@
-
+/* タブレット */
+@media (max-width: 1000px) {
+    body{
+        padding: 0;
+        margin: 0;
+    }
+    
+   }
+   
+   
+   
+   
+   /* スマートフォン */
+   @media (max-width: 670px) {
+       body{
+           padding: 0;
+           margin: 0;
+       }
+    
+    }
