--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     padding: 0;
     margin: 0;
@@ -13,7 +17,7 @@ body {
 }
 .header-container {
     padding: 20px 40px;
-    
+    width: 100%;
 }
 .names {
     font-size: 100px;
@@ -44,6 +48,7 @@ body {
 }
 .top-container {
     padding: 20px 20px;
+    width: 100%;
 }
 .top-contents{
     text-align: center;
@@ -81,6 +86,7 @@ span{
 }
 .skill-container{
     padding: 20px 20px;
+    width: 100%;
 }
 .skill {
     text-align: center;
@@ -107,6 +113,7 @@ span{
 }
 .service-container{
     padding: 20px 20px;
+    width: 100%;
 }
 .heading{
     text-align: center;
@@ -161,6 +168,7 @@ span{
 }
 .work-container{
     padding: 10px 20px;
+    width: 100%;
 }
 .work-contents h2{
 color: white;
@@ -193,6 +201,7 @@ text-align: center;
 }
 .footer-container{
     padding: 10px 20px;
+     width: 100%;
 }
 .footer-contents h2{
     font-size: 32px;
