--- a/responsive.css
+++ b/responsive.css
@@ -17,25 +17,30 @@
            margin: 0;
        }
        
-      .header{
+     .header{
            background-size: contain;
            background-repeat: no-repeat;
+           width: 100%;
        }
        .top-wrapper{
            background-size: contain;
            background-repeat: no-repeat;
+           width: 100%;
        }
        .skill-wrapper{
            background-size:contain;
            background-repeat: no-repeat;
+           width: 100%;
        }
        .service-wrapper{
            background-size: contain;
            background-repeat: no-repeat;
+           width: 100%;
        }
        .work-wrapper{
            background-size: contain;
            background-repeat: no-repeat;
+           width: 100%;
        }
     
     }
