--- a/responsive.css
+++ b/responsive.css
@@ -18,7 +18,10 @@
        }
        
        .names{
-           font-size: 20px;
+           font-size: 50px;
+       }
+       .iii{
+           font-size: 40px;
        }
        
      
