--- a/responsive.css
+++ b/responsive.css
@@ -24,6 +24,11 @@
            font-size: 40px;
        }
        
+       .gazou{
+           width: 70px;
+           height: 70px;
+       }
+       
      
     
     }
