--- a/responsive.css
+++ b/responsive.css
@@ -25,8 +25,7 @@
        }
        
        .gazou{
-           width: 70px;
-           height: 70px;
+         width: 50%;  
        }
        
      
