--- a/responsive.css
+++ b/responsive.css
@@ -19,9 +19,11 @@
        
        .names{
            font-size: 45px;
+           text-align: center;
        }
        .iii{
            font-size: 40px;
+           text-align: center;
        }
        
        .srvice-icon{
