--- a/responsive.css
+++ b/responsive.css
@@ -17,6 +17,10 @@
            margin: 0;
        }
        
+       .header{
+           width: 100%;
+       }
+       
        .names{
            font-size: 45px;
            text-align: center;
