--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-
+    
 * {
 box-sizing: border-box;
 }
@@ -9,7 +9,7 @@ body {
     margin: 0;
 }
 .header {
-    height: 600px;
+    height: 100%;
     background-image: url(./image/bricks-459299_1280.top.footer.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -18,6 +18,7 @@ body {
 .container {
     padding: 10px 20px;
     width: 100%;
+    
 }
 .names {
     font-size: 90px;
@@ -65,6 +66,7 @@ font-size: 20px;
 color: white;
 text-align: center;
 }
+
 .unko{
     margin-top: 90px;
 }
@@ -163,6 +165,7 @@ span{
 
 
 
+
 .work-wrapper{
     height: 450px;
     background-image: url(./image/startup-593327_1280.unko.jpg);
@@ -204,7 +207,7 @@ text-align: center;
 }
 .footer-container{
     padding: 10px 20px;
-     width: 100%;
+    width: 100%;
 }
 .footer-contents h2{
     font-size: 32px;
