--- a/stylesheet.css
+++ b/stylesheet.css
@@ -84,23 +84,28 @@ span{
     background-image: url(./image/coding-1853305_1280skil.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    
+    text-align: center;
 }
+
+
 .skill-container{
     padding: 20px 20px;
     width: 100%;
 }
-.skill {
+.skill-heading {
     text-align: center;
+   
     color: white;
 
 }
+
 .skill h2 {
     font-size: 50px;
 }
-.skill li{
+.ppp{
     list-style: none;
     font-size: 27px;
+   color: white;
 }
 
 
@@ -157,7 +162,7 @@ span{
     margin-top: 20px;
     margin-bottom: 140px;
 }
-.unko p{
+.unko5{
     text-align: center;
     color: white;
     font-size: 20px;
@@ -187,7 +192,7 @@ text-align: center;
     margin-bottom: 70px;
     margin-left: 200px;
     width: 70%;
-   
+    text-align: center;
 }
 .aaa {
     color: white;
