--- a/responsive.css
+++ b/responsive.css
@@ -1,68 +1,41 @@
-/* タブレット */
-@media (max-width: 1000px) {
-    body{
-        padding: 0;
-        margin: 0;
-    }
-    
-   }
-   
-   
-   
-   
-   /* スマートフォン */
-   @media (max-width: 670px) {
-       body{
-           padding: 0;
-           margin: 0;
-       }
-      
-    
-       .names{
-           font-size: 45px;
-           text-align: center;
-       }
-       .iii{
-           font-size: 40px;
-           text-align: center;
-       }
-       .srvice-icon{
-           width: 50%;
-       }
-       
-       .unko p{
-           font-size: 20px;
-       }
-       .service-icon p{
-           font-size: 20px;
-       }
-       .work-contents li{
-           width: 70%;
-           margin: auto;
-           
-           
-       }
-       .unko5 p{
-           font-size: 15px;
-       }
-    }
-
-
-    /* モバイルS */
-    @media (max-width: 320px) {
+ /* モバイルS */
+    @media screen and (min-width: 320px) and (max-width:375px) {
         body {
             padding: 0;
             margin: 0;
         }
 
         .header{
-            height: 260px;
+            height: 100%;
         }
         .top-wrapper{
             height: 100%;
         }
+        .top-contents{
+            font-size: 25px;
+        }
+        .chinko h3{
+          font-size: 13px;
+        }
+        .chinko p{
+            margin: 20px 15px;
+        }
+        .lll{
+            width: 120px;
+            height: 120px;
+        }
+        .unko h3{
+            font-size: 13px;
+        }
+        .unko p{
+            margin: 20px 15px;
+        }
+       
         .service-wrapper{
             height: 100%;
+        }
+        .service-icon p{
+            font-size: 20px;
         }
         .work-wrapper{
             height: 100%;
@@ -87,21 +60,53 @@
             color: white;
         }
         .work-contents li{
-            margin-bottom: 40px;
-           
+            width: 70%;
+           margin: 40px auto;
         }
     }
 
+    @media screen and (min-width: 375px) and (max-width:425px) {
 
-    @media (min-width: 320px) {
+        body{
+            padding: 0;
+            margin: 0;
+        }
         .header{
             height: 100%;
+            
+        }
+        .names {
+            font-size: 30px;
+            margin-top: 30px;
+
+        }
+        .iii {
+            font-size: 15px;
         }
         .top-wrapper{
             height: 100%;
         }
+        .top-contents {
+            font-size: 19px;
+        }
+        .chinko h3{
+            font-size: 16px;
+          }
+          .chinko p{
+              margin: 20px 15px;
+          }
+          .lll{
+              width: 120px;
+              height: 120px;
+          }
+          .unko h3{
+              font-size: 16px;
+          }
         .skill-wrapper{
             height: 100%;
+        }
+        .service-icon p{
+            font-size: 25px;
         }
         .service-wrapper{
             height: 100%;
@@ -114,20 +119,87 @@
             color: white;
         }
 
+       
         .work-contents li{
-            margin-bottom: 40px;
-           
+            width: 70%;
+           margin: 40px auto;
         }
     }
 
-    @media (min-width:425px) {
+    @media screen and (min-width:425px) and (max-width:768px) {
         
-        .work-contents li{
-            margin: auto;
-            width: 70%;
-            margin-bottom: 30px;
+        body{
+            padding: 0;
+            margin: 0;
+        }
+        .header{
+            height: 100%;
+            
+        }
+        .names {
+            font-size: 30px;
+            margin-top: 30px;
+
+        }
+        .iii {
+            font-size: 15px;
+        }
+        .top-wrapper{
+            height: 100%;
+        }
+        .top-contents {
+            font-size: 26px;
+        }
+        .chinko h3{
+            font-size: 20px;
+          }
+          .chinko p{
+              margin: 20px 20px;
+          }
+          .lll{
+              width: 120px;
+              height: 120px;
+          }
+          .unko h3{
+              font-size: 20px;
+          }
+          .unko p{
+              margin: 20px 20px;
+          }
+        .skill-wrapper{
+            height: 100%;
+        }
+        .service-icon p{
+            font-size: 25px;
+        }
+        .service-wrapper{
+            height: 100%;
+        }
+        .work-wrapper{
+            height: 100%;
         }
 
+        .unko5 p{
+            color: white;
+        }
+
+       
+        .work-contents li{
+            width: 70%;
+           margin: 40px auto;
+        }
       
         
     }
+
+
+    /* タブレット */
+    @media screen and (min-width:768px) and (max-width:1024px) {
+        .chinko p{
+            margin: 20px 30px;
+        }
+
+       
+    }
+
+      
